UI: center upgrade title, enlarge card text

--- a/index.html
+++ b/index.html
@@ -77,9 +77,10 @@
         }
 
         #upgradeModal h2 {
-            margin: 0 0 12px;
+            margin: 0 0 20px;
             font-size: 20px;
             letter-spacing: .5px;
+            text-align: center;
         }
 
         .upgrades {
@@ -168,8 +169,8 @@
         .upgrade p,
         .upgrade .bodyText {
             margin: 0;
-            font-size: 13px;
-            line-height: 1.4;
+            font-size: 15px;
+            line-height: 1.48;
             color: #cfd9e3;
             text-align: center;
         }
@@ -203,7 +204,7 @@
 
         .power-compare .lvl {
             font-weight: 600;
-            font-size: 13px;
+            font-size: 14px;
             letter-spacing: .7px;
             text-align: center;
         }
@@ -219,7 +220,7 @@
         }
 
         .power-compare .col.next .lvl {
-            font-size: 14px;
+            font-size: 15px;
             letter-spacing: .8px;
         }
 
@@ -228,7 +229,7 @@
         }
 
         .power-compare .stat {
-            font-size: 13px;
+            font-size: 15px;
             text-align: center;
         }
 
