Refactor: extract inline CSS into assets/style.css

--- a/index.html
+++ b/index.html
@@ -5,530 +5,7 @@
     <meta charset="UTF-8" />
     <title>Void Survivor</title>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <style>
-        html,
-        body {
-            margin: 0;
-            padding: 0;
-            background: #0d0d0f;
-            color: #eee;
-            font-family: system-ui, Arial, sans-serif;
-            overflow: hidden;
-            /* prevent page scroll */
-        }
-
-        #app {
-            width: 100vw;
-            height: 100vh;
-            overflow: hidden;
-        }
-
-        .hud {
-            position: fixed;
-            top: 8px;
-            left: 8px;
-            font-size: 14px;
-            background: rgba(0, 0, 0, .45);
-            backdrop-filter: blur(4px);
-            padding: 8px 12px;
-            border-radius: 8px;
-            line-height: 1.4;
-            box-shadow: 0 2px 6px rgba(0, 0, 0, .4);
-        }
-
-        .bar {
-            height: 8px;
-            background: #222;
-            border-radius: 4px;
-            overflow: hidden;
-            margin-top: 4px;
-            width: 240px;
-            position: relative;
-        }
-
-        .bar>span {
-            display: block;
-            height: 100%;
-            background: linear-gradient(90deg, #46c35f, #7ddc92);
-            width: 0%;
-            transition: width .15s linear;
-        }
-
-        .bar.hp>span {
-            background: linear-gradient(90deg, #d32f2f, #ef5350);
-        }
-
-        #upgradeModal {
-            position: fixed;
-            inset: 0;
-            display: none;
-            align-items: center;
-            justify-content: center;
-            background: rgba(0, 0, 0, .6);
-            z-index: 10;
-        }
-
-        #upgradeModal .panel {
-            background: #1c1f24;
-            padding: 28px 34px 34px;
-            border-radius: 22px;
-            width: min(980px, 94%);
-            box-shadow: 0 14px 38px -6px rgba(0, 0, 0, .6);
-        }
-
-        #upgradeModal h2 {
-            margin: 0 0 20px;
-            font-size: 20px;
-            letter-spacing: .5px;
-            text-align: center;
-        }
-
-        .upgrades {
-            /* horizontal card row */
-            display: flex;
-            flex-direction: row;
-            gap: 22px;
-            margin-top: 8px;
-            align-items: stretch;
-            justify-content: center;
-            flex-wrap: nowrap;
-        }
-
-        .upgrade {
-            background: linear-gradient(145deg, #262d33 0%, #1d2327 60%);
-            border: 1px solid #30363d;
-            padding: 16px 20px 22px;
-            border-radius: 20px;
-            cursor: pointer;
-            transition: .18s background, .18s border-color, .25s transform, .25s box-shadow;
-            flex: 1 1 0;
-            min-width: 240px;
-            max-width: 300px;
-            display: flex;
-            flex-direction: column;
-            justify-content: flex-start;
-            position: relative;
-            box-shadow: 0 4px 14px -4px rgba(0, 0, 0, .55), 0 2px 0 rgba(255, 255, 255, 0.03) inset;
-            overflow: hidden;
-            min-height: 400px;
-        }
-
-        .upgrade:before {
-            content: "";
-            position: absolute;
-            inset: 0;
-            background: radial-gradient(circle at 50% 30%, rgba(255, 255, 255, .06), transparent 70%);
-            opacity: 0;
-            transition: .35s opacity;
-            pointer-events: none;
-        }
-
-        .upgrade:hover:before {
-            opacity: 1;
-        }
-
-        .upgrade:hover {
-            background: linear-gradient(150deg, #2b343b, #222a30 55%);
-            border-color: #3d9bff;
-            transform: translateY(-4px) scale(1.015);
-            box-shadow: 0 10px 28px -6px rgba(0, 0, 0, .7), 0 0 0 1px rgba(61, 155, 255, .35), 0 0 22px -2px rgba(61, 155, 255, .4);
-        }
-
-        .upgrade.power {
-            border-color: #494d55;
-        }
-
-        .upgrade.power:hover {
-            border-color: #d4b35a;
-            box-shadow: 0 10px 28px -6px rgba(0, 0, 0, .7), 0 0 0 1px rgba(255, 210, 120, .35), 0 0 26px -2px rgba(255, 210, 120, .35);
-        }
-
-        .upgrade:hover {
-            background: #2d353d;
-            border-color: #3d9bff;
-            transform: translateY(-2px);
-        }
-
-        .upgrade h3 {
-            margin: 0 0 14px;
-            font-size: 20px;
-            color: #ffe08a;
-            text-align: center;
-            letter-spacing: .8px;
-            font-weight: 600;
-            text-shadow: 0 2px 4px rgba(0, 0, 0, .6);
-        }
-
-        .upgrade .body {
-            flex: 1 1 auto;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-        }
-
-        .upgrade p,
-        .upgrade .bodyText {
-            margin: 0;
-            font-size: 15px;
-            line-height: 1.48;
-            color: #cfd9e3;
-            text-align: center;
-        }
-
-        .upgrade .body div {
-            color: #cfd9e3;
-        }
-
-        .upgrade.selected {
-            border-color: #5aa9ff;
-            box-shadow: 0 0 0 1px rgba(90, 169, 255, .35), 0 6px 18px -6px rgba(0, 120, 255, .45);
-        }
-
-        .upgrade.selected:hover {
-            border-color: #7bc0ff;
-        }
-
-        .power-compare {
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-            margin-top: 4px;
-        }
-
-        .power-compare .col {
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            gap: 4px;
-        }
-
-        .power-compare .lvl {
-            font-weight: 600;
-            font-size: 14px;
-            letter-spacing: .7px;
-            text-align: center;
-        }
-
-        .power-compare .col.current .lvl,
-        .power-compare .col.current .stat {
-            color: #9ea6ad;
-        }
-
-        .power-compare .col.next .lvl,
-        .power-compare .col.next .stat {
-            color: #fff;
-        }
-
-        .power-compare .col.next .lvl {
-            font-size: 15px;
-            letter-spacing: .8px;
-        }
-
-        .power-compare .col.next .stat {
-            font-weight: 600;
-        }
-
-        .power-compare .stat {
-            font-size: 15px;
-            text-align: center;
-        }
-
-        .power-compare .arrowDown {
-            display: flex;
-            justify-content: center;
-        }
-
-        .power-compare .arrowIcon {
-            width: 36px;
-            height: 36px;
-            border-radius: 50%;
-            background: #262d33;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: #d2dde7;
-            font-size: 18px;
-            box-shadow: 0 3px 8px -3px rgba(0, 0, 0, .6);
-        }
-
-        .upgrade.power:not(:hover) .power-compare .col.next {
-            opacity: .85;
-        }
-
-        .footerHint {
-            margin-top: 14px;
-            font-size: 12px;
-            opacity: .6;
-            text-align: right;
-        }
-
-        .menu {
-            position: fixed;
-            inset: 0;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            background: radial-gradient(circle at 50% 40%, rgba(40, 60, 80, 0.15), rgba(0, 0, 0, 0.85));
-            z-index: 20;
-        }
-
-        .menu-panel {
-            background: #181c22;
-            padding: 32px 40px 40px;
-            border-radius: 18px;
-            box-shadow: 0 12px 40px rgba(0, 0, 0, .55);
-            text-align: center;
-        }
-
-        .menu-panel h1 {
-            margin: 0 0 24px;
-            font-size: 42px;
-            letter-spacing: 2px;
-            background: linear-gradient(90deg, #4cc3ff, #b3fffa);
-            -webkit-background-clip: text;
-            background-clip: text;
-            color: transparent;
-        }
-
-        .menu-panel button {
-            display: block;
-            width: 220px;
-            margin: 8px auto;
-            padding: 10px 14px;
-            font-size: 16px;
-            background: #25313b;
-            color: #dfe9f1;
-            border: 1px solid #355062;
-            border-radius: 10px;
-            cursor: pointer;
-            transition: .15s background, border-color, transform;
-        }
-
-        .menu-panel button:hover {
-            background: #2f3f4b;
-            border-color: #4ca3d8;
-            transform: translateY(-2px);
-        }
-
-        .menu-panel button.focused {
-            background: #2f3f4b;
-            border-color: #4ca3d8;
-            box-shadow: 0 0 0 2px rgba(76, 163, 216, .35);
-            transform: translateY(-2px);
-        }
-
-        .menu-panel button.danger {
-            background: #402424;
-            border-color: #6b2d2d;
-        }
-
-        .menu-panel button.danger:hover {
-            background: #552d2d;
-            border-color: #c44747;
-        }
-
-        /* Game Over specific */
-        .gameover-panel {
-            width: min(760px, 90%);
-            padding: 46px 60px 54px !important;
-        }
-
-        .goButtons {
-            display: flex;
-            gap: 34px;
-            justify-content: center;
-            margin-top: 34px;
-        }
-
-        .goButtons button {
-            flex: 1 1 0;
-            background: #262d33;
-            border: 1px solid #3a434b;
-            border-radius: 40px;
-            padding: 18px 10px;
-            font-size: 20px;
-            font-weight: 500;
-            letter-spacing: .5px;
-            color: #dfe7ef;
-            cursor: pointer;
-            transition: .18s background, .18s border-color, .18s box-shadow, .18s color;
-        }
-
-        .goButtons button:hover {
-            background: #2f3840;
-            border-color: #4ca3d8;
-        }
-
-        .goButtons button.selected,
-        .goButtons button:focus-visible {
-            outline: none;
-            background: #303e46;
-            border-color: #5aa9ff;
-            box-shadow: 0 0 0 2px rgba(90, 169, 255, .35);
-        }
-
-        .gameover-note {
-            margin-top: 34px;
-            font-size: 14px;
-            opacity: .55;
-        }
-
-        .menu-panel .small {
-            margin-top: 22px;
-            opacity: .45;
-            font-size: 12px;
-        }
-
-        /* Meta upgrades (roguelite) */
-        .meta-panel {
-            /* widen upgrades panel */
-            width: min(1180px, 92vw);
-            text-align: left;
-            max-height: 86vh;
-            display: flex;
-            flex-direction: column;
-        }
-
-        .meta-header {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            gap: 6px;
-            margin: -4px 0 14px;
-            text-align: center;
-        }
-
-        .meta-title {
-            margin: 0;
-            font-size: 36px;
-            letter-spacing: 1px;
-            background: linear-gradient(90deg, #6ed6ff, #b5fff4);
-            -webkit-background-clip: text;
-            background-clip: text;
-            color: transparent;
-        }
-
-        .back-btn {
-            width: auto;
-            margin: 0;
-            padding: 10px 22px;
-        }
-
-        .meta-shards {
-            font-size: 16px;
-            font-weight: 600;
-            margin: 0 0 6px;
-            text-align: center;
-        }
-
-        .meta-list {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
-            gap: 18px 20px;
-            padding: 12px 6px 12px 2px;
-            /* room for scrollbar */
-            overflow-y: auto;
-            flex: 1 1 auto;
-        }
-
-        .meta-list::-webkit-scrollbar {
-            width: 10px;
-        }
-
-        .meta-list::-webkit-scrollbar-track {
-            background: #181c22;
-        }
-
-        .meta-list::-webkit-scrollbar-thumb {
-            background: #2a333b;
-            border-radius: 6px;
-        }
-
-        .meta-list::-webkit-scrollbar-thumb:hover {
-            background: #36424c;
-        }
-
-        .meta-upgrade {
-            background: #20252b;
-            border: 1px solid #2d3942;
-            padding: 16px 18px 64px;
-            border-radius: 16px;
-            font-size: 13px;
-            line-height: 1.45;
-            position: relative;
-            box-shadow: 0 4px 16px rgba(0, 0, 0, .35);
-            transition: border-color .15s, background .15s, transform .15s, box-shadow .15s;
-            aspect-ratio: 1 / 1;
-            /* square cards */
-            display: flex;
-            flex-direction: column;
-        }
-
-        .meta-upgrade:hover {
-            border-color: #3d9bff;
-            background: #25303a;
-            transform: translateY(-3px);
-        }
-
-        .meta-upgrade.focused {
-            border-color: #5aa9ff;
-            box-shadow: 0 0 0 1px rgba(90, 169, 255, .35), 0 4px 16px rgba(0, 0, 0, .45);
-        }
-
-        .meta-upgrade.deny {
-            animation: metaDeny .5s;
-        }
-
-        @keyframes metaDeny {
-            0% {
-                border-color: #ff5c5c;
-                box-shadow: 0 0 0 1px rgba(255, 92, 92, .4);
-            }
-
-            50% {
-                border-color: #2d3942;
-                box-shadow: none;
-            }
-
-            100% {
-                border-color: #2d3942;
-                box-shadow: none;
-            }
-        }
-
-        .meta-upgrade h3 {
-            margin: 0 0 8px;
-            font-size: 17px;
-            letter-spacing: .3px;
-        }
-
-        .meta-upgrade button {
-            position: absolute;
-            bottom: 14px;
-            left: 18px;
-            right: 18px;
-            width: auto;
-            margin: 0;
-            font-size: 14px;
-            padding: 9px 12px;
-        }
-        .meta-upgrade button.disabled {
-            opacity: .45;
-            cursor: not-allowed;
-            filter: grayscale(.3);
-        }
-        .meta-upgrade .cost.insufficient { color:#ff5c5c; font-weight:600; }
-
-        .meta-upgrade .lvl {
-            font-weight: 600;
-            color: #8dd4ff;
-        }
-
-        .meta-upgrade.locked {
-            opacity: .45;
-        }
-    </style>
+    <link rel="stylesheet" href="/assets/style.css" />
 </head>
 
 <body>
@@ -618,7 +95,6 @@
         <div style="opacity:.55; margin-top:4px;">(Press Tab to toggle)</div>
     </div>
     <script type="module" src="/src/main.ts"></script>
-
 </body>
 
 </html>
