feat(debug): move snapshot save/load to Settings menu with guarded debug section

--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@
             <h2 style="margin-top:0;">Settings</h2>
             <div style="margin:10px 0 20px; font-size:14px; opacity:.8;">(More settings coming soon.)</div>
             <button id="btnResetMeta" class="danger" style="margin-top:4px;">Reset Save</button>
+            <div class="debugSection" style="margin-top:28px; border-top:1px solid rgba(255,255,255,.08); padding-top:18px;">
+                <div style="font-size:13px; letter-spacing:.5px; text-transform:uppercase; opacity:.6; margin-bottom:8px;">Debug (Local)</div>
+                <button id="btnDebugExport" class="debug" style="width:240px;">Export Run Snapshot</button>
+                <button id="btnDebugImport" class="debug" style="width:240px;">Import Run Snapshot</button>
+                <div style="font-size:11px; opacity:.45; margin-top:6px; line-height:1.4; max-width:260px;">Snapshots let you resume mid-run for testing. Disabled in production builds.</div>
+            </div>
             <button id="btnBackSettings" class="back-btn" style="margin-top:20px;">Back</button>
         </div>
     </div>
