chore: sync debug export/import improvements and env gating cleanup

--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
         <div style="opacity:.55; margin-top:4px;">(Press Tab to toggle)</div>
     </div>
     <script type="module" src="/src/main.ts"></script>
+    <div id="toastRoot" class="toast-container" aria-live="polite" aria-atomic="true"></div>
 </body>
 
 </html>
