meta: implement refund/reset + refundState helper and button wiring

--- a/index.html
+++ b/index.html
@@ -22,13 +22,14 @@
     </div>
     <div id="metaMenu" class="menu" style="display:none;">
         <div class="menu-panel meta-panel">
-            <div class="meta-header">
-                <h2 class="meta-title">Meta Upgrades</h2>
+            <div class="meta-header" style="display:flex; align-items:center; justify-content:space-between; gap:16px;">
+                <h2 class="meta-title" style="margin:0;">Meta Upgrades</h2>
                 <div id="metaShards" class="meta-shards">Shards: 0</div>
             </div>
             <div id="metaList" class="meta-list"></div>
-            <div style="display:flex; justify-content:flex-end; margin-top:12px;">
-                <button id="btnBackMeta" class="back-btn">Back</button>
+            <div style="display:flex; justify-content:space-between; margin-top:12px; gap:12px;">
+                <button id="btnRefundMeta" class="secondary" style="flex:0 0 auto;">Refund All</button>
+                <button id="btnBackMeta" class="back-btn" style="flex:0 0 auto;">Back</button>
             </div>
         </div>
     </div>
