feat(stats): add Statistics panel and main menu button\n\n- New Statistics button on main menu opens stats panel\n- Stats panel lists meta stats (runs, time played, best time, kills, averages, shards)\n- Add buildMetaStats helper with unit tests (passes)\n- Wire menu navigation and focus to include stats menu

--- a/index.html
+++ b/index.html
@@ -15,9 +15,17 @@
             <h1>Void Survivor</h1>
             <button id="btnStart">Start Run</button>
             <button id="btnMeta">Upgrades</button>
+            <button id="btnStats">Statistics</button>
             <button id="btnInstructions">Instructions</button>
             <button id="btnSettings">Settings</button>
             <div class="small">v0.1 prototype</div>
+        </div>
+    </div>
+    <div id="statsMenu" class="menu" style="display:none;">
+        <div class="menu-panel" style="max-width:520px; text-align:left;">
+            <h2 style="margin-top:0;">Statistics</h2>
+            <div id="metaStatsContent" style="font-size:14px; line-height:1.5; white-space:pre-line; margin-top:4px;"></div>
+            <button id="btnBackStats" class="back-btn" style="margin-top:18px;">Back</button>
         </div>
     </div>
     <div id="metaMenu" class="menu" style="display:none;">
