--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     <div id="statsMenu" class="menu" style="display:none;">
         <div class="menu-panel" style="max-width:520px; text-align:left;">
             <h2 style="margin-top:0;">Statistics</h2>
-            <div id="metaStatsContent" style="font-size:14px; line-height:1.5; white-space:pre-line; margin-top:4px;"></div>
+            <div id="metaStatsContent" style="font-size:14px; line-height:1.5; white-space:pre-line; margin-top:4px;">
+            </div>
             <button id="btnBackStats" class="back-btn" style="margin-top:18px;">Back</button>
         </div>
     </div>
